Correction background color collapse open et couleur du texte

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -37,10 +37,11 @@
             overflow: hidden;
             transition: max-height 0.5s ease;
             padding: 0 15px;
-            color: white;
+            color: rgb(0, 0, 0);
             &.open {
             max-height: 300px;
             padding: 15px;
+            background-color: #f3f3f3;
             }
         }
     }
